@startuml

class Calculator {
  + int compute(std::unique_ptr<CalculatorCommand> command);
  + void undoLast();
  + int result() const;
  + void clear();
  - int current;
  - std::stack<std::unique_ptr<CalculatorCommand>> stack;
}

abstract class CalculatorCommand {
  + virtual ~CalculatorCommand() = default;
  + virtual int execute(int val) const = 0;
  + virtual void undo(int val) const = 0;
}

class Add {
  + Add(int operand);
  + int execute(int val) const override;
  + void undo(int val) const override;
  - int operand;
}

class Subtract {
  + Subtract(int operand);
  + int execute(int val) const override;
  + void undo(int val) const override;
  - int operand;
}

Calculator o--> CalculatorCommand
CalculatorCommand <|-- Add
CalculatorCommand <|-- Subtract

note left of Add::execute
  return val + operand;
end note

note left of Add::undo
  return val - operand;
end note

note right of Subtract::execute
  return val - operand;
end note

note right of Subtract::undo
  return val + operand;
end note

@enduml
